paso todo a sass y cambios en la pagina

--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="informacion">
             <div class="tittle">
                 <h1>Información</h1>
             </div>
