--- a/pages/pilchas.html
+++ b/pages/pilchas.html
@@ -31,7 +31,139 @@
     </header>
     <main>
         <section>
-            <div class="pilchas-section">
+            <div class="container">
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo4.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo11.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+            </div>
+            <div class="container">
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo4.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo11.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+            </div>
+            <div class="container">
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo8.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo11.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+            </div>
+            <div class="container">
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo4.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo11.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+            </div>
+            <div class="container">
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo4.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                    $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo11.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="../assets/img/nuevo 2.png" alt="">
+                    <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
+                    <input type="button" value="Ver más">
+                </div>
+            </div>
+            
+            
+            <!-- <div class="pilchas-section">
                 <div class="pilchas">
                     <img src="../assets/img/nuevo1.png" alt="Prenda1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolor eaque placeat soluta optio minus enim, ipsum fuga culpa vel?</p>
@@ -150,7 +282,7 @@
                         <input type="button" value="Ver más">
                     </div>
                 </div>
-            </div>
+            </div> -->
     <!-- <div
             class="prueba">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ipsam labore tempore. Assumenda ratione sit impedit aut atque beatae consequatur.
