--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elcuartoderue</title>
-    
+    <title>elcuartoderue</title>    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=DM+Serif+Display&family=Gelasio:wght@700&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header>
-        <nav class="boostrap">
+        <nav>
             <a href="#" class="logo">elcuartoderue</a>
             <ul>
                 <li><a href="./pages/pilchas.html">Pilchas</a></li>
@@ -28,10 +25,10 @@
                     </svg></li>
                 <li><svg xmlns="http://www.w3.org/2000/svg" width="22" height="25" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                    </svg></li>
-                    
-                </ul>
-                <i class="fa-solid fa-bars"></i>
+                    </svg>
+                </li>                    
+            </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
     </header>
     <main>
@@ -40,48 +37,61 @@
             <div class="texto">
                 <p>EL CUARTO DE RUE</p>
                 <p>Ropa vintage y de 2da mano / FERIA AMERICANA</p>
-                <a href="#h2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
-                    </svg>
-                </a>
             </div>
         </div>
-        <section  id="h2">
-                <h2>Lorem, ipsum dolor.</h2>
+        <section>
+                <h2>Ultimos ingresos</h2>
                 <div class="container">
                     <div class="container-card">
                         <img src="./assets/img/nuevo 2.png" alt="">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat deserunt corrupti qui aliquid commodi dolor eos, quae ut nihil quisquam sunt repellat exercitationem quis! Nihil itaque inventore quo eum molestias, aut ea reiciendis facere, quis magnam dolorum assumenda neque aliquid. Porro natus explicabo alias nam non ipsum repellat minima quod.</p>
+                        <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
                         <input type="button" value="Ver más">
                     </div>
                     <div class="container-card">
                         <img src="./assets/img/nuevo4.png" alt="">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat deserunt corrupti qui aliquid commodi dolor eos, quae ut nihil quisquam sunt repellat exercitationem quis! Nihil itaque inventore quo eum molestias, aut ea reiciendis facere, quis magnam dolorum assumenda neque aliquid. Porro natus explicabo alias nam non ipsum repellat minima quod.</p>
+                        <p>BUZO LEVIS BLANCO <br>
+                        $800</p>
                         <input type="button" value="Ver más">
                     </div>
                     <div class="container-card">
                         <img src="./assets/img/nuevo11.png" alt="">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat deserunt corrupti qui aliquid commodi dolor eos, quae ut nihil quisquam sunt repellat exercitationem quis! Nihil itaque inventore quo eum molestias, aut ea reiciendis facere, quis magnam dolorum assumenda neque aliquid. Porro natus explicabo alias nam non ipsum repellat minima quod.</p>
+                        <p>BUZO LEVIS BLANCO <br>
+                            $800</p>
                         <input type="button" value="Ver más">
                     </div>
                     <div class="container-card">
                         <img src="./assets/img/nuevo 2.png" alt="">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat deserunt corrupti qui aliquid commodi dolor eos, quae ut nihil quisquam sunt repellat exercitationem quis! Nihil itaque inventore quo eum molestias, aut ea reiciendis facere, quis magnam dolorum assumenda neque aliquid. Porro natus explicabo alias nam non ipsum repellat minima quod.</p>
+                        <p>BUZO LEVIS BLANCO <br>
+                            $800</p>
                         <input type="button" value="Ver más">
                     </div>
+                </div>
+                <div  class="ver-mas">
+                    <p>Ver más productos</p>
+                </div>    
         </section>
-        <section class="div-comentarios">
-            <h2>Lorem, ipsum dolor.</h2>
+        <section class="div-color">
+            <h2>Algunos de sus comentarios</h2>
             <div class="comentarios">
-                <img src="./assets/img/comentario1.png" alt="">
-                <img src="./assets/img/comentario2.png" alt="">
-                <img src="./assets/img/comentario4.png" alt="">
-            </div>
-            <div class="comentarios">
-                <img src="./assets/img/comentario5.png" alt="">
-                <img src="./assets/img/comentario3.png" alt="">
-                <img src="./assets/img/comentario6.png" alt="">
+                <div class="comentarios-flex">
+                    <img src="./assets/img/comentario1.png" alt="">
+                </div>
+                <div class="comentarios-flex">
+                    <img src="./assets/img/comentario2.png" alt="">
+                </div>
+                <div class="comentarios-flex">
+                    <img src="./assets/img/comentario4.png" alt="">
+                </div>
+                <div class="comentarios-flex">
+                    <img src="./assets/img/comentario5.png" alt="">
+                </div>
+                <div class="comentarios-flex">
+                    <img src="./assets/img/comentario3.png" alt="">
+                </div>
+                <div class="comentarios-flex">
+                    <img src="./assets/img/comentario6.png" alt="">
+                </div>
             </div>
         </section>
     </main>
@@ -105,7 +115,5 @@
             2022 - elcuartoderue | Compra 100% asegurada </p>
         </div>
     </footer>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
