--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elcuartoderue</title>    
+    <meta name="description" content="Esta es la tienda online vintage de elcuartoderue. Ingresá y conocé nuestra amplia variedad de prendas únicas al mejor precio.">
+    <title>Inicio -elcuartoderue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,36 +41,39 @@
             </div>
         </div>
         <section>
-                <h2>Ultimos ingresos</h2>
-                <div class="container">
-                    <div class="container-card">
-                        <img src="./assets/img/nuevo 2.png" alt="">
-                        <p>BUZO LEVIS BLANCO <br>
-                        $800</p>
-                        <input type="button" value="Ver más">
-                    </div>
-                    <div class="container-card">
-                        <img src="./assets/img/nuevo4.png" alt="">
-                        <p>BUZO LEVIS BLANCO <br>
-                        $800</p>
-                        <input type="button" value="Ver más">
-                    </div>
-                    <div class="container-card">
-                        <img src="./assets/img/nuevo11.png" alt="">
-                        <p>BUZO LEVIS BLANCO <br>
-                            $800</p>
-                        <input type="button" value="Ver más">
-                    </div>
-                    <div class="container-card">
-                        <img src="./assets/img/nuevo 2.png" alt="">
-                        <p>BUZO LEVIS BLANCO <br>
-                            $800</p>
-                        <input type="button" value="Ver más">
-                    </div>
+            <div class="tittle">
+                <h1>Ultimos ingresos</h1>
+            </div>
+            <div class="container">
+                <div class="container-card">
+                    <img src="./assets/img/prenda3.jpeg" alt="Remera vintage Hilfiger">
+                    <p>REMERA HILFIGER <br>
+                    $1300 <br>
+                </p>
+                    <input type="button" value="Ver más">
                 </div>
-                <div  class="ver-mas">
-                    <p>Ver más productos</p>
-                </div>    
+                <div class="container-card">
+                    <img src="./assets/img/prenda4.jpeg" alt="Chomba Museum">
+                    <p>CHOMBA MUSEUM <br>
+                    $1600</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="./assets/img/prenda5.png" alt="Buzo Howard naranja">
+                    <p>BUZO HOWARD <br>
+                        $2100</p>
+                    <input type="button" value="Ver más">
+                </div>
+                <div class="container-card">
+                    <img src="./assets/img/prenda9.png" alt="Camisa vintage Overd">
+                    <p>CAMISA OVERD <br>
+                        $1500</p>
+                    <input type="button" value="Ver más">
+                </div>
+            </div>
+            <div class="ver-mas">
+                <a href="./pages/pilchas.html">Ver más</a>
+            </div>    
         </section>
         <section class="div-color">
             <h2>Algunos de sus comentarios</h2>
