--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Información</title>
+    <meta name="description" content="Te contamos como comprar, que métodos de pago aceptamos, los envíos, y informamos sobre los cambios y devoluciones.">
+    <title>Información -elcuartoderue</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +29,7 @@
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                     </svg></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
     </header>
     <main>
@@ -40,31 +43,34 @@
                 </svg>
                 <p>Recordá registrarte para poder realizar tu compra</p>
             </div>
-            <div class="nube">
-                <h2>Envíos</h2>
-                <p>Envíos a todo el país a través de Correo Argentino. Con tu código postal podés calcular el costo de envío a la sucursal del Correo o Domicilio.</p>
-                <b>Te lo llevamos a tu casa!</b>
-                <p>En el caso de residir en CABA, te damos la opción de que nosotros te lo llevemos a tu casa, o coordinamos un punto de encuentro, asi te ahorras el costo de envío. <br>
-                    Vas a poder abonar en efectivo en el momento que tengas el pedido en mano!!</p>
-            </div>
-            <div class="nube">
-                <h2>Medios de pago</h2>
-                <p>Podrás abonar vía Mercado Pago (Tarjeta de crédito o débito), transferencia bancaria, o en efectivo cuando tengas el pedido en mano (Solo CABA).</p>
-            </div>
-            <div class="nube">
-                <h2>Finaliza tu compra</h2>
-                <p>Antes de finalizar tu compra, chequeá que todos tu datos estén correctos. El mail es donde vas a recibir los detalles de tu compra. <br>
-                    En el caso de residir en CABA y querés que el pedido te lo llevemos nosotros, nos comunicaremos contigo para coordinar la entrega lo antes posible.</p>
-            </div>
-            <div class="nube">
-                <h2>Cambio y devoluciones</h2>
-                <p>No realizamos cambios ni devoluciones. Todos los detalles, especificaiones y medididas de las prendas están en la descripción de cada producto. <br>
-                    Chequeá las medidas para evitar incovenientes.</p>
-            </div>
+            <section class="box-faqs">
+                <div>
+                    <h3>Envíos</h3>
+                    <p>Envíos a todo el país a través de Correo Argentino. Con tu código postal podés calcular el costo de envío a la sucursal del Correo o Domicilio.</p>
+                    <b>Te lo llevamos a tu casa!</b>
+                    <p>En el caso de residir en CABA, te damos la opción de que nosotros te lo llevemos a tu casa, o coordinamos un punto de encuentro, asi te ahorras el costo de envío. <br>
+                        Vas a poder abonar en efectivo en el momento que tengas el pedido en mano!!</p>
+                </div>
+                <div>
+                    <h3>Medios de pago</h3>
+                    <p>Podrás abonar vía Mercado Pago (Tarjeta de crédito o débito), transferencia bancaria, o en efectivo cuando tengas el pedido en mano (Solo CABA).</p>
+                </div>
+                <div>
+                    <h3>Finaliza tu compra</h3>
+                    <p>Antes de finalizar tu compra, chequeá que todos tu datos estén correctos. El mail es donde vas a recibir los detalles de tu compra. <br>
+                        En el caso de residir en CABA y querés que el pedido te lo llevemos nosotros, nos comunicaremos contigo para coordinar la entrega lo antes posible.</p>
+                </div>
+                <div>
+                    <h3>Cambios y devoluciones</h3>
+                    <p>No realizamos cambios ni devoluciones. Todos los detalles, especificaiones y medididas de las prendas están en la descripción de cada producto. <br>
+                        Chequeá las medidas para evitar incovenientes.</p>
+                </div> 
+            </section>
             <div class="info"> 
                 <b>Cualquier otra duda o consulta que tengas te podés comunicar con nosotros a través de nuestas redes sociales.</b>
             </div>
         </section>
+
     </main>
     <footer class="footer">
         <div class="rrss">
