--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nosotros</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="../css/style.css">
-    
+    <meta name="description" content="Te contamos quienes somos, como se originó elcuartoderue, y algunos de los outfits de Rue.">
+    <title>Nosotros -elcuartoderue</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/style.css">   
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=DM+Serif+Display&display=swap" rel="stylesheet">
@@ -29,23 +28,42 @@
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                     </svg></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
     </header>
-    <main class="container galeria">
-        <div class="text-center row parrafo">
-            <p>ELCUARTODERUE es una tienda de ropa vintage y usada a unos precios increibles.
-                Somos un emprendimiento con conciencia ecológica y hacemos esfuerzos necesarios para dañar lo menos posible al ecosistema, como con nuestos packaging echo con materiales reciclables.</p>
-            <p>El nombre de la página nace a traves del personaje RUE de la serie euphoria, que tiene un estilo 100 % vintage <br>
-                Acá vas a poder comprarte toda la ropa vintage que quieras y llevarla con la actitud de Rue <br> Chequeate algunos de sus outfits </p>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12"> <img src="../assets/img/rue2.jpeg" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"> <img src="../assets/img/zendaya.webp" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"> <img src="../assets/img/rue10.jpg" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"> <img src="../assets/img/rue12.jpg" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"> <img src="../assets/img/rue13.jpg" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"> <img src="../assets/img/rue14.jpg" alt=""></div>
-            </div>
-        </div>
+    <main>
+        <section class="nosotros">
+                <div class="tittle">
+                    <h1>Sobre nosotros</h1>
+                </div>
+                <div class="nosotros-parrafo">
+                    <p>ELCUARTODERUE es una tienda de ropa vintage y usada a unos precios increibles.
+                        Somos un emprendimiento con conciencia ecológica y hacemos esfuerzos necesarios para dañar lo menos posible al ecosistema, como con nuestos packaging echos con materiales reciclables.</p>
+                    <p>El nombre de la página nace a través del personaje RUE de la serie euphoria, que tiene un estilo relajado y descuidado en la forma más cool. <br>
+                        Acá vas a poder comprarte toda la ropa vintage que quieras y llevarla con la actitud de Rue. <br> Chequeate algunos de sus outfits. </p>
+                </div>
+                <div class="nosotros-galeria">
+                    <div class="nosotros-img">
+                        <img src="../assets/img/rue2.jpeg" alt="">
+                    </div>
+                    <div class="nosotros-img">
+                        <img src="../assets/img/zendaya.webp" alt="">
+                    </div>
+                    <div class="nosotros-img">
+                        <img src="../assets/img/rue10.jpg" alt="">
+                    </div>
+                    <div class="nosotros-img">
+                        <img src="../assets/img/rue12.jpg" alt="">
+                    </div>
+                    <div class="nosotros-img">
+                        <img src="../assets/img/rue13.jpg" alt="">
+                    </div>
+                    <div class="nosotros-img">
+                        <img src="../assets/img/rue14.jpg" alt="">
+                    </div>
+                </div>
+        </section>
+        
     </main>
     <footer class="footer">
         <div class="rrss">
@@ -67,7 +85,5 @@
             2022 - elcuartoderue | Compra 100% asegurada </p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
 </body>
 </html>
